# HLSLCrossCompiler

./: .gitignore  README  debug.h  decode.c  decode.h  hlsl_opcode_funcs.glsl  hlsl_opcode_funcs_glsl.h  languages.h  license.txt  printdecode.c  printdecode.h  reflect.c  reflect.h  structs.h  timer.c  toGLSL.c  toGLSL.h  toGLSLDeclaration.c  toGLSLDeclaration.h  toGLSLInstruction.c  toGLSLInstruction.h  toGLSLOperand.c  toGLSLOperand.h  toGLSLStandalone.c  tokens.h
include/: hlslcc.h
mk/: CMakeLists.txt
offline/: serializeReflection.cpp  toGLSLStandalone.cpp
src/: controlFlowGraph.c  decode.c  decodeDX9.c  reflect.c  toGLSL.c  toGLSLDeclaration.c  toGLSLInstruction.c  toGLSLInstructionLegacy.c  toGLSLOperand.c
src/cbstring/: bsafe.c  bstrlib.c
src/internal_includes/: controlFlowGraph.h  decode.h  hlsl_opcode_funcs.glsl  hlsl_opcode_funcs_glsl.h  hlslcc_malloc.c  hlslcc_malloc.h  languages.h  reflect.h  shaderLimits.h  structs.h  toGLSLDeclaration.h  toGLSLInstruction.h  toGLSLInstructionLegacy.h  toGLSLOperand.h  tokens.h  tokensDX9.h
tests/: runall.py
tests/apps/common/: Image.cpp  Image.h  Shader.cpp  Shader.h  debug.cpp  debug.h  itransform.h  model.cpp  model.h
tests/apps/common/glew/: glew.c
tests/apps/common/vectormath/: LICENSE
tests/apps/extrudeGS/: main.cpp
tests/apps/extrudeGS/mk/: CMakeLists.txt
tests/apps/extrudeGS/shaders/: ExtrudeGS.asm  ExtrudeVS.asm
tests/apps/generic/: main.cpp
tests/apps/integer/: main.cpp
tests/apps/lambertLit/: main.cpp
tests/apps/lambertLit/mk/: CMakeLists.txt
tests/apps/lambertLit/shaders/: LambertLitSolidPS.asm  LambertLitVS.asm
tests/apps/mk/: CMakeLists.txt
tests/apps/mk/extrudeGS/: CMakeLists.txt
tests/apps/mk/generic/: CMakeLists.txt
tests/apps/mk/integer/: CMakeLists.txt
tests/apps/mk/lambertLit/: CMakeLists.txt
tests/apps/mk/subroutines/: CMakeLists.txt
tests/apps/mk/tessellation/: CMakeLists.txt
tests/apps/shaders/: Extrude.fx  ExtrudeGS.asm  ExtrudePS.asm  ExtrudeVS.asm  Integer.fx  IntegerVS.asm  IntegerVS.glsl  LambertLit.fx  LambertLitDX9PS.asm  LambertLitDX9SolidPS.asm  LambertLitDX9VS.asm  LambertLitPS.asm  LambertLitPS.glsl  LambertLitSolidPS.asm  LambertLitVS.asm  SubroutinesPS.asm  SubroutinesVS.asm  SubroutinesVS.glsl  SubroutinesVS.glsl_compileErrors.txt  tessellation.hlsl  tessellationDS.asm  tessellationHS.asm  tessellationPS.asm  tessellationVS.asm
tests/apps/shaders/generic/: ClippingVS.asm  compute.asm  idPS.asm  idVS.asm  template.asm  template.hlsl  templatePS.asm  templatePostFXPS.asm  templatePostFXVS.asm  templateVS.asm  wavyPS.asm  wavyVS.asm
tests/apps/subroutines/: main.cpp
tests/apps/tessellation/: main.cpp
tests/apps/vertexLit/: main.cpp
tests/apps/vertexLit/shaders/: VertexLitPS.asm
tests/cs5/: BasicCompute11.asm  BasicCompute11Double.asm  BasicCompute11StructuredBuffer.asm  BasicCompute11StructuredBufferDouble.asm  Issue11.asm  Issue11Struct.asm  Issue34.asm  ThreadGroupSharedMem.asm
tests/ds5/: basic.asm
tests/gs4/: CubeMap_Inst.asm  PipesGS.asm  PipesGS.fx
tests/gs5/: instance.asm  stream.asm  stream.fx
tests/hs5/: AdaptiveTessellation.hlsl  DecalTessellation11.asm  DecalTessellation11.hlsl  basic.asm  basic_NoOptimisation.asm  basic_change_pos  basic_change_pos.asm  issue32.asm  issue32b.asm  two_fork_phases.asm  two_fork_phases.hlsl
tests/ps2/: tex2d.asm  uniformFuncParam.asm
tests/ps3/: ParallaxOcclusionMapping.asm  constTexCoord.asm  derivative.asm  discard.asm  fxaa.asm
tests/ps4/: HDAO.asm  HDAO.fx  RaycastTerrain.fx  RaycastTerrainShootRayPS.asm  constTexCoord  constTexCoord.asm  derivative.asm  discard_nz.asm  for_loop.asm  fxaa.asm  issue26.asm  issue8.asm  load.asm  loadWithOffset  loadWithOffset.asm  primID.asm  resinfo.asm
tests/ps5/: ContactHardeningShadows11.hlsl  ContactHardeningShadows11PS.asm  array_of_textures.asm  array_of_textures.hlsl  atomic_counter  atomic_counter.asm  atomic_mem  atomic_mem.asm  conservative_depth_ge.asm  conservative_depth_le.asm  coverage.asm  evaluateAttrib.asm  gather.asm  interface_arrays  interface_arrays.asm  interfaces.asm  interfaces_multifunc.asm  interpolation.asm  load_store  load_store.asm  lod.asm  precision.asm  precision.hlsl  resinfo.asm  retc.asm  sample  sample.asm  sample1D.asm  sample1D.hlsl  sample1DLod.asm  sample1DLod.hlsl  sample3D.asm  sample3D.hlsl  sample3DLod.asm  sample3DLod.hlsl  sampleInteger.asm  twoSideDepthWrite.asm
tests/quarantined/ps5/: this.asm
tests/results_o/glsl120/ps2/: tex2d.o.glsl  uniformFuncParam.o.glsl
tests/results_o/glsl120/vs2/: VS_ShaderInstancing.o.glsl  boolconst.o.glsl  intrep.o.glsl  loop.o.glsl  mov.o.glsl  pointsize.o.glsl  sign.o.glsl
tests/results_o/glsl150/gs4/: CubeMap_Inst.o.glsl  PipesGS.o.glsl
tests/results_o/glsl150/ps3/: ParallaxOcclusionMapping.o.glsl  constTexCoord.o.glsl  derivative.o.glsl  discard.o.glsl
tests/results_o/glsl150/ps4/: RaycastTerrainShootRayPS.o.glsl  derivative.o.glsl  fxaa.o.glsl  issue8.o.glsl  load.o.glsl  resinfo.o.glsl
tests/results_o/glsl150/vs4/: Instancing.o.glsl  array_input.o.glsl  default_const.o.glsl  issue20.o.glsl  matrix_array.o.glsl  minmax.o.glsl  multiple_const_buffers.o.glsl  switch.o.glsl  xor.o.glsl
tests/results_o/glsl330/gs4/: CubeMap_Inst.o.glsl  PipesGS.o.glsl
tests/results_o/glsl330/ps3/: ParallaxOcclusionMapping.o.glsl  constTexCoord.o.glsl  derivative.o.glsl  discard.o.glsl  fxaa.o.glsl
tests/results_o/glsl330/ps4/: HDAO.o.glsl  constTexCoord.o.glsl  (+6 more)
tests/vs2/: VS_ShaderInstancing.asm  boolconst.asm  intrep.asm  loop.asm  mov.asm  pointsize.asm  sign.asm
tests/vs4/: array_input  array_input.asm  bitwiseNot.asm  constBufferSwapRegister.asm  continuec  continuec.asm  default_const  default_const.asm  issue20.asm  issue21.asm  matrix_array.asm  minmax.asm  mov.asm  multiple_const_buffers.asm  shift  shift.asm  struct_const.asm  switch.asm  xor.asm
tests/vs5/: any.asm  bits.asm  compareBitwise  compareBitwise.asm  const_temp.asm  exp.asm  issue28.asm  issue35.asm  mad_imm.asm  mov.asm  precision  precision.asm  rcp.asm  sincos.asm  tempArray  tempArray.asm
(+78 files in other folders)
